--- a/style.css
+++ b/style.css
@@ -22,3 +22,43 @@ p {
     font-size: 16px;
     width: 80%;
 }
+
+.contact-form {
+    margin: 35px auto 0px auto;
+    width: 80%;
+}
+
+.contact-form label {
+    font-size: 20px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.contact-form input {
+    padding: 12px 20px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    background: rgb(255, 255, 255);
+    font-size: 18px;
+    border-radius: 3px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.contact-form input:focus {
+    border-bottom: 2px solid #1a883f;
+}
+
+.contact-form textarea {
+    padding: 12px 20px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    background: rgb(255, 255, 255);
+    font-size: 18px;
+    border-radius: 3px;
+    width: 100%;
+    font-family: inter;
+    font-weight: normal;
+}
