fixed form position, style, color

--- a/style.css
+++ b/style.css
@@ -62,3 +62,38 @@ p {
     font-family: inter;
     font-weight: normal;
 }
+
+.contact-form textarea:focus {
+    border-bottom: 2px solid #1a883f;
+}
+
+.contact-form button {
+    font-size: 19px;
+    width: 100%;
+    margin-top: 25px;
+    border: none;
+    padding: 12px 20px;
+    background-color: #22b352;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    border-bottom: 3px solid #1a883f;
+}
+
+.contact-form button:hover {
+    background-color: #1a883f;
+    border-bottom: 3px solid #22b352;
+}
+
+@media all and (min-width: 1000px) {
+    .contact-form {
+        width: 40%;
+    }
+}
+
+@media all and (min-width: 1080px) {
+    .contact-form {
+        width: 30%;
+    }
+}
